--- a/papers/references.bib
+++ b/papers/references.bib
@@ -133,20 +133,20 @@ series = {ICFP '00}
 %% Fuzzing
 
 @inproceedings{zest,
-author = {Padhye, Rohan and Lemieux, Caroline and Sen, Koushik and Papadakis, Mike and Le Traon, Yves},
-title = {Semantic Fuzzing with Zest},
-year = {2019},
-isbn = {9781450362245},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3293882.3330576},
-doi = {10.1145/3293882.3330576},
-booktitle = {Proceedings of the 28th ACM SIGSOFT International Symposium on Software Testing and Analysis},
-pages = {329–340},
-numpages = {12},
-keywords = {property-based testing, random testing, Structure-aware fuzzing},
-location = {Beijing, China},
-series = {ISSTA 2019}
+  author = {Padhye, Rohan and Lemieux, Caroline and Sen, Koushik and Papadakis, Mike and Le Traon, Yves},
+  title = {Semantic Fuzzing with Zest},
+  year = {2019},
+  isbn = {9781450362245},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3293882.3330576},
+  doi = {10.1145/3293882.3330576},
+  booktitle = {Proceedings of the 28th ACM SIGSOFT International Symposium on Software Testing and Analysis},
+  pages = {329–340},
+  numpages = {12},
+  keywords = {property-based testing, random testing, Structure-aware fuzzing},
+  location = {Beijing, China},
+  series = {ISSTA 2019}
 }
 
 %% HDLs
@@ -156,6 +156,12 @@ series = {ISSTA 2019}
   author={Chiusano, Paul and Bjarnason, Runar},
   year={2014},
   publisher={Simon and Schuster}
+}
+
+@misc{circt,
+  author = {LLVM},
+  title = {CIRCT: Circuit IR Compilers and Tools},
+  howpublished = {\url{https://circt.llvm.org/}}
 }
 
 @inproceedings{lava,
@@ -202,6 +208,28 @@ series = {ISSTA 2019}
   doi={10.1109/MM.2020.2997638}
 }
 
+@INPROCEEDINGS{umoc,
+  author={Jiang, Shunning and Ou, Yanghui and Pan, Peitian and Batten, Christopher},
+  booktitle={2021 58th ACM/IEEE Design Automation Conference (DAC)},
+  title={UMOC: Unified Modular Ordering Constraints to Unify Cycle- and Register-Transfer-Level Modeling},
+  year={2021},
+  volume={},
+  number={},
+  pages={883-888},
+  doi={10.1109/DAC18074.2021.9586130}
+}
+
+@INPROCEEDINGS{dfiant,
+  author={Port, Oron and Etsion, Yoav},
+  booktitle={2017 27th International Conference on Field Programmable Logic and Applications (FPL)},
+  title={DFiant: A dataflow hardware description language},
+  year={2017},
+  volume={},
+  number={},
+  pages={1-4},
+  doi={10.23919/FPL.2017.8056858}
+}
+
 @misc{blarney,
   author = {Naylor, Matthew},
   title = {blarney: Haskell library for hardware description},
@@ -224,3 +252,48 @@ series = {ISSTA 2019}
   location = {Virtual, USA},
   series = {ASPLOS '21}
 }
+
+@inproceedings{cider,
+  author = {Berlstein, Griffin and Nigam, Rachit and Gyurgyik, Christophe and Sampson, Adrian},
+  title = {Stepwise Debugging for Hardware Accelerators},
+  year = {2023},
+  isbn = {9781450399166},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3575693.3575717},
+  doi = {10.1145/3575693.3575717},
+  booktitle = {Proceedings of the 28th ACM International Conference on Architectural Support for Programming Languages and Operating Systems, Volume 2},
+  pages = {778–790},
+  numpages = {13},
+  keywords = {Intermediate Language, Debugging, Accelerator Simulation, Accelerator Design},
+  location = {Vancouver, BC, Canada},
+  series = {ASPLOS 2023}
+}
+
+@inproceedings{hwsemantics,
+  author = {Bernstein, Gilbert et. al.},
+  title = {What are the Semantics of Hardware?},
+  year = {2021},
+  booktitle = {LATTE '21},
+  url = {https://capra.cs.cornell.edu/latte21/paper/19.pdf}
+}
+
+
+@inproceedings{llhd,
+  author = {Schuiki, Fabian and Kurth, Andreas and Grosser, Tobias and Benini, Luca},
+  title = {LLHD: A Multi-Level Intermediate Representation for Hardware Description Languages},
+  year = {2020},
+  isbn = {9781450376136},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3385412.3386024},
+  doi = {10.1145/3385412.3386024},
+  booktitle = {Proceedings of the 41st ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages = {258–271},
+  numpages = {14},
+  keywords = {transformation passes, hardware description languages, intermediate representations},
+  location = {London, UK},
+  series = {PLDI 2020}
+}
+
+
