drafting nextgen hdl paper

--- a/papers/references.bib
+++ b/papers/references.bib
@@ -48,6 +48,12 @@
   institution={Technical Report. MSR-TR-2016-29. Microsoft Research technical report}
 }
 
+@misc{unison,
+  author = {Paul Chiusano},
+  title = {A friendly programming language from the future},
+  howpublished = {\url{https://github.com/unisonweb/unison}}
+}
+
 %% Stimulus generation
 
 @inproceedings{quickcheck,
@@ -164,6 +170,45 @@ series = {ICFP '00}
   howpublished = {\url{https://circt.llvm.org/}}
 }
 
+@inproceedings{coreir,
+  title={Invoking and linking generators from multiple hardware languages using coreir},
+  author={Daly, Ross and Truong, Lenny and Hanrahan, Pat},
+  booktitle={Proceedings of the 1st Workshop on Open-Source EDA Technology},
+  year={2018}
+}
+
+@misc{uhdm,
+  author = {chipsalliance},
+  title = {Universal Hardware Data Model. A complete modeling of the IEEE SystemVerilog Object Model with VPI Interface, Elaborator, Serialization, Visitor and Listener. Used as a compiled interchange format in between SystemVerilog tools.},
+  howpublished = {\url{https://github.com/chipsalliance/UHDM}}
+}
+
+@inproceedings{firrtl,
+  title={Reusability is FIRRTL ground: Hardware construction languages, compiler frameworks, and transformations},
+  author={Izraelevitz, Adam and Koenig, Jack and Li, Patrick and Lin, Richard and Wang, Angie and Magyar, Albert and Kim, Donggyu and Schmidt, Colin and Markley, Chick and Lawson, Jim and others},
+  booktitle={2017 IEEE/ACM International Conference on Computer-Aided Design (ICCAD)},
+  pages={209--216},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{bluespecverilog,
+  title={Bluespec System Verilog: efficient, correct RTL from high level specifications},
+  author={Nikhil, Rishiyur},
+  booktitle={Proceedings. Second ACM and IEEE International Conference on Formal Methods and Models for Co-Design, 2004. MEMOCODE'04.},
+  pages={69--70},
+  year={2004},
+  organization={IEEE}
+}
+
+@inproceedings{legup,
+  title={LegUp: high-level synthesis for FPGA-based processor/accelerator systems},
+  author={Canis, Andrew and Choi, Jongsok and Aldham, Mark and Zhang, Victor and Kammoona, Ahmed and Anderson, Jason H and Brown, Stephen and Czajkowski, Tomasz},
+  booktitle={Proceedings of the 19th ACM/SIGDA international symposium on Field programmable gate arrays},
+  pages={33--36},
+  year={2011}
+}
+
 @inproceedings{lava,
   author = {Bjesse, Per and Claessen, Koen and Sheeran, Mary and Singh, Satnam},
   title = {Lava: Hardware Design in Haskell},
@@ -278,7 +323,6 @@ series = {ICFP '00}
   url = {https://capra.cs.cornell.edu/latte21/paper/19.pdf}
 }
 
-
 @inproceedings{llhd,
   author = {Schuiki, Fabian and Kurth, Andreas and Grosser, Tobias and Benini, Luca},
   title = {LLHD: A Multi-Level Intermediate Representation for Hardware Description Languages},
@@ -296,4 +340,53 @@ series = {ICFP '00}
   series = {PLDI 2020}
 }
 
+@misc{esi,
+  title={Elastic Silicon Interconnects: Abstracting Communication in Accelerator Design}, 
+  author={John Demme},
+  year={2021},
+  eprint={2111.06584},
+  archivePrefix={arXiv},
+  primaryClass={cs.AR}
+}
 
+@phdthesis{pyrope,
+  title={Design and Implementation of the Pyrope Hardware Language},
+  author={Huang, Jing-Hsiang},
+  year={2022},
+  school={University of California, Santa Cruz}
+}
+
+@misc{migen,
+  author = {m-labs},
+  title = {Migen - A Python toolbox for building complex digital hardware},
+  howpublished = {\url{https://github.com/m-labs/migen}}
+}
+
+@misc{amaranth,
+  author = {whitequark},
+  title = {Amaranth HDL -  A modern hardware definition language and toolchain based on Python},
+  howpublished = {\url{https://github.com/amaranth-lang/amaranth}}
+}
+
+@misc{pipelinec,
+  author = {Julian Kemmerer},
+  title = {PipelineC - A C-like hardware description language (HDL) adding high level synthesis(HLS)-like automatic pipelining as a language construct/compiler feature.},
+  howpublished = {\url{https://github.com/JulianKemmerer/PipelineC}}
+}
+
+@inproceedings{tlverilog,
+  title={Timing-abstract circuit design in transaction-level Verilog},
+  author={Hoover, Steven F},
+  booktitle={2017 IEEE International Conference on Computer Design (ICCD)},
+  pages={525--532},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{shakeflow,
+  title={ShakeFlow: Functional Hardware Description with Latency-Insensitive Interface Combinators},
+  author={Han, Sungsoo and Jang, Minseong and Kang, Jeehoon},
+  booktitle={Proceedings of the 28th ACM International Conference on Architectural Support for Programming Languages and Operating Systems, Volume 2},
+  pages={702--717},
+  year={2023}
+}
