--- a/papers/plarch23-nextgen_hdl/plarch23-nextgen_hdl.tex
+++ b/papers/plarch23-nextgen_hdl/plarch23-nextgen_hdl.tex
@@ -94,7 +94,7 @@ $^{(\ast)}$
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
 \title{Elements of a Next-Gen HDL}
-% \subtitle{}
+\subtitle{A Case for Mixed-Abstraction HDLs and Discussing Other Aspects of HDL Design}
 
 %%
 %% The "author" command and its associated commands are used to define
@@ -126,14 +126,21 @@ $^{(\ast)}$
 %% of authors' names for this purpose.
 % \renewcommand{\shortauthors}{Trovato et al.}
 
+% MY NOTES for this paper are in:
+%   research/hdl.md
+%   research/phd_planning/idea_archive/chisel.md
+%   research/conf_retreats/asplos23_latchup23.md
 
 \begin{abstract}
 % In the past, HDLs have been 1) focused on one-level of abstraction (RTL, event-driven simulation, HLS), 2) not aware of cross-cutting concerns outside their domain, 3) more-or-less ad-hoc approaches to hardware design
 % Let's analyze the past HDLs and try to pull new ideas to determine what the next-generation HDL ought to look like
-We have seen many HDLs (Lava, Chisel, PyMTL3) emerge in the past few years as well as new IRs (FIRRTL, CoreIR, CIRCT / MLIR) and databases (UHDM).
-What is missing is a hollistic view of the design, verification, and implementation process.
-We will discuss problems to solve in frontend, middle-end, and backend implementations of HDLs to motivate the design of the next-generation HDL.
-We argue that the HDL of the future needs to support composition of multiple abstraction levels and capture design elements from the complete flow of hardware design, verification, and fabrication.
+% What is missing is a hollistic view of the design, verification, and implementation process.
+% How should HDLs capture design elements from the complete flow of hardware design, verification, and fabrication.
+% We will discuss problems to solve in frontend, middle-end, and backend implementations of HDLs to motivate the design of the next-generation HDL.
+
+Hardware design languages (HDLs) have emerged in many flavors (including freestanding DSLs and eDSLs), in addition to new IRs (FIRRTL\cite{firrtl}, CoreIR\cite{coreir}, CIRCT\cite{circt}) and HDL databases (UHDM\cite{uhdm}).
+Looking at the current infrastructure and existing HDLs, we argue that the next-gen HDL should support composition of descriptions from multiple abstraction levels.
+We also discuss other HDL implementation questions such as what primitives should an IR support, how design semantics should be preserved through lowering, the role of modules, and incremental elaboration.
 \end{abstract}
 
 % \received{20 February 2007}
@@ -146,24 +153,25 @@ We argue that the HDL of the future needs to support composition of multiple abs
 
 \begin{figure*}[!hbt]
 \small
-\begin{tabular}{p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}}\toprule
-\textbf{Abstraction Level} & Primitives & Simulation Technique & Examples & Utility & Values & Time \\\midrule
-Transistor-level & PDK transistor models, wires, passives, physical geometry & Solving systems of differential equations & SPICE, Spectre & Analog circuit design, standard cell characterization &  & \\\midrule
-Gate-level & PDK standard cells & Event-driven simulation & Structural Verilog with SDF annotations & & & \\\midrule
-Register-transfer level & & & & & & \\\midrule
-Discrete Event Models & & & & & & \\\midrule
-Dataflow Pipelines & & & & & & \\\midrule
-Algorithms & & & & & & \\\bottomrule
+\begin{tabular}{p{2cm}p{3cm}p{2cm}p{3cm}p{3cm}p{2cm}}\toprule
+\textbf{Abstraction} & \textbf{Primitives} & \textbf{Simulation} & \textbf{Examples} & \textbf{Utility} & \textbf{Domain} \\\midrule
+Transistor-level & PDK transistor models, wires, passives, physical geometry & Solving systems of differential equations & SPICE, Spectre & Analog circuit design, standard cell characterization & Continuous time and voltage\\\midrule
+Gate-level & PDK standard cells & Event-driven simulation & Structural Verilog with SDF annotations & Post-syn verification, timing validation & Discrete time, 4-valued state\\\midrule
+Register-transfer level & Flops, SRAMs, logic/arithmetic operators, wires & Transition system simulation & Lava\cite{lava}, Chisel\cite{chisel}, Amaranth\cite{amaranth} & Synchronous digital circuit design and verification & Regular clock ticks, 2/4 valued signals\\\midrule
+Digital discrete-event modeling & State, event-triggered blocks & Event-driven simulation & Verilog, PyMTL3\cite{pymtl3} & Behavioral modeling of digital/analog IPs & Discrete time, 4-valued signals\\\midrule
+Pipelines & Token streams, ordered operations, dataflow history & Ordered token processing & DFiant\cite{dfiant}, TL-Verilog\cite{tlverilog}, PipelineC\cite{pipelinec}, Shakeflow\cite{shakeflow} & Dataflow circuits, auto-pipelining & Tokens in, tokens out\\\midrule
+Imperative control flow & &  & Calyx\cite{calyx}, XLS\cite{xls} & System-level modeling, high-level synthesis & Transaction traces\\\bottomrule
+Transaction-level models & Ports / channels, threads, imperative code & TLM kernel & SystemC-TLM, PyMTL3 & System-level modeling, high-level synthesis & Transaction traces\\\bottomrule
 \end{tabular}
-\caption{Overview of different abstraction levels for describing hardware designs and }
+\caption{Overview of different abstraction levels for describing hardware designs.}
 \label{fig:abstractions}
 \end{figure*}
 
 % Overview of multiple levels of abstraction used in real HDLs
 
 Hardware can be modeled at various levels of abstraction spanning from low-level transistor-level constructs to high-level algorithmic constructs (see Figure \ref{fig:abstractions}).
-Most modern HDLs (Lava, Chisel, PyMTL3) have focused on providing a metaprogramming layer on the register-transfer level (RTL) abstraction, since this is the usual abstraction used by digital designers.
-Some HDLs work at a higher-level, abstracting away explicit state instantiations or control flow logic: they can be based on guarded atomic actions (e.g. BlueSpec Verilog), decoupled dataflow pipelines (e.g. PipelineC, DFiant\cite{dfiant}, Shakeflow), highly-controllable lightweight-HLS constructs (e.g. Calyx, XLS), or largely automated heavyweight-HLS from SystemC/C++ (e.g. Vivado HLS, Catapult, LegUp).
+Most modern HDLs have focused on providing a metaprogramming layer on the register-transfer level (RTL) abstraction, since this is the usual abstraction used by digital designers.
+Some HDLs work at a higher-level, abstracting away explicit state instantiations or control flow logic: they can be based on guarded atomic actions (e.g. BlueSpec Verilog\cite{bluespecverilog}), decoupled dataflow pipelines (e.g. PipelineC\cite{pipelinec}, DFiant\cite{dfiant}, Shakeflow\cite{shakeflow}), highly-controllable lightweight-HLS constructs (e.g. Calyx\cite{calyx}, XLS\cite{xls}), or largely automated heavyweight-HLS from SystemC/C++ (e.g. Vivado HLS, Catapult, LegUp\cite{legup}).
 Some HDLs, like Verilog, work at an arguably ``lower-level'' than RTL, opting to describe hardware as a generic discrete event simulation.
 
 % The IR question + the benefits of rigorously defined semantics vs Verilog
@@ -177,7 +185,7 @@ Relying on formally defined semantics for an IR (to check equivalence of transfo
 % Preserve the semantics of each abstraction level vs lowering things to verilog and blackboxing.
 
 Recently, the CIRCT project\cite{circt} has developed several IRs that span RTL (the ``hw'' + ``seq'' + ``comb'' dialects) and higher-level abstractions (the ``handshake'', ``esi'', ``ssp'', and ``calyx''\cite{calyx} dialects).
-While these dialects may not have formal semantics yet, there is an opportunity to precisely define them (including undefined behaviors), and move away from the idea of ``Verilog simulation as truth"".
+While these dialects may not have formal semantics yet, there is an opportunity to precisely define them (including undefined behaviors), and move away from the idea of ``Verilog simulation as truth''.
 For now, these IRs do not interact with each other, and are either simulated entirely in their own context, or are composed by, first lowering to the RTL abstraction dialect, and then connecting them.
 However, there exists an opportunity to define the semantics of the \textit{composition} and \textit{interaction} of circuits expressed in different IRs.
 We make the case that the next-gen HDL should support mixed-abstraction circuit definitions.
@@ -192,7 +200,7 @@ We make the case that the next-gen HDL should support mixed-abstraction circuit 
 
 We already understand that dataflow algorithms are more ergonomic to implement, and easier to optimize, when written in a high-level abstraction (above RTL).
 Ideally, we wouldn't have to write the accelerator in a different HDL, lower it to Verilog, then simulate it with the rest of the RTL, integrated as a Verilog blackbox.
-Instead, the HDL should leverage Circt's multiple IR dialects to support mixed-abstraction simulation to yield higher simulation performance and improve integration ergonomics\cite{pymtl3}.
+Instead, the HDL should leverage Circt's multiple IR dialects to support mixed-abstraction simulation to yield higher simulation performance and improve integration ergonomics\cite{pymtl3, esi}.
 Such an approach also enables an ergonomic flow for refinement proofs from high-level models to RTL, as well as performance correlation checking between timed and untimed models.
 
 % Low level for clocks, even lower for mixed signal, what about async resets (iffy simulation semantics leak into FIRRTL), timing simulation
@@ -214,28 +222,44 @@ Often, one will want to execute arbitrary code in between events to process a tr
 The simulator may want to statically analyze the code (e.g. a clock generator) to make optimizations (e.g. use per-cycle simulation rather than event loop-based simulation when the clock input is a fixed frequency, always-on waveform).
 Approaches to address this include expressing arbitrary code as LLVM IR that's called by a CIRCT IR routine or forgoing static analysis.
 
+\section{Practical HDL Implementation Questions}
+
+% We now quickly discuss some practical questions when implementing an HDL.
+
 \subsection{IR Primitives}
 
 % What primitives should exist? How can we capture the complexity of mapping to ASIC/FPGA primitives in different PDKs?
 
-A related and open question is: how should hardware primitives be modeled in a HDL?
+An open question is: how should hardware primitives be modeled in a HDL?
 Existing approaches expose common primitives (e.g. SRAMs) through HDL primitives (e.g. Chisel's SyncReadMem), which work for the common case, but are unable to cleanly express custom SRAM features such as ECC or BIST.
 One ``solution'' is to use a Verilog blackbox around the custom SRAM marco, but we lose understanding of the primitive's semantics.
 Another ``solution'' is to model the custom macro using the available HDL primitives, and replace it with the Verilog blackbox during compilation, but we run the risk of inaccurately modeling the macro.
 Mixed-abstraction HDLs have the potential to enable description of custom primitives in a way that capture's its semantics while also validating that blackbox substitutions have the same behavior.
 
-\subsection{Other HDL Concerns}
-
-We discuss some practical 
-
-% \subsection{Preserving Semantics Through Lowering}
+\subsection{Preserving Semantics Through IR Lowering}
 
 % Xs for synthesis
 % case statements, interfaces / structs
 % balance simplicity of IR and pass complexity with avoiding semantics reconstruction
 % lgraph claims to be very simple, but does that come at costs?
 
-% \subsection{Modules: What Are They Good For?}
+Often, there is a fight between IRs trying to minimize their primitive count to make pass writing easier, and frontends trying to map all their constructs as cases of the IR primitive set.
+One issue is that synthesis tools have been refined over decades to recognize patterns in human written Verilog to reconstruct useful semantics (e.g. SRAM and FSM inference).
+How can we preserve semantics (using Xs for boolean optimization, unique case statements, interfaces / structs) from the frontend HDL so that they are passed onto the synthesis tool as if a human had written them?
+If we could design a synthesis frontend from scratch, what semantics would be most valuable to preserve, and how would it differ from existing RTL IRs?
+
+\subsection{Modules: What Are They Good For?}
+
+We often take the module construct in Verilog as integral to digital design, but it necessitates special support for features like cross-module references and regrouping for hierarchical VLSI.
+Modules have three use-cases: 1) stamping out duplicate instances of a circuit, 2) providing a boundary of parameterization for circuits, 3) adding hierarchy to the design to improve UX when searching for signals.
+We note the following analogies: \textit{modules : functions}, \textit{parameters : function arguments}, \textit{hierarchy : call stack}.
+Few HDLs, such as Pyrope\cite{pyrope}, elide the module concept altogether, but perhaps it's time to rethink how HDLs should express instances, parameterization, and hierarchy.
+
+\subsection{Incremental-First HDLs}
+
+Most HDLs today, constructed as eDSLs, have no idea about how a design changes from run-to-run, thus making incremental elaboration difficult.
+This is an area where freestanding DSLs such as Pyrope have an advantage, since source level dependency tracking for eDSLs requires analysis of arbitary code written in the host language.
+There is hope that new \textit{content-addressable} languages, such as Unison\cite{unison}, will make such dependency tracking, and thus incremental elaboration viable for HDLs implemented as eDSLs.
 
 % \section{Frontend Implementation Details}
 %
@@ -262,24 +286,23 @@ We discuss some practical
 % SSA vs graph representation of a circuit - see LiveHD compiler for an example of strong parallelism that is difficult to do inside LLVM / MLIR
 % using effect handlers to switch between different API modes - interpretation in the front-end, fully lazy compilation into a circuit, JIT'ed segments of the interpretation for good perf/compile tradeoff
 
-\section{Hollistic View of Hardware Design}
+% \section{Hollistic View of Hardware Design}
 
-\section{Features}
-\subsection{Semantics Preserving}
+% \section{Features}
 
-\subsection{Incremental-First}
+% \subsection{IR formats} graph vs SSA
 
-\subsubsection{Injection points}
+% \subsection{Incremental-First}
+
+% \subsubsection{Injection points}
 
 % chisel aspects, multi-level macros
 
-\subsection{Visual first, Iterative Dev}
+% \subsection{Visual first, Iterative Dev}
 
-\subsection{Refined Simulation}
+% \subsection{Refined Simulation}
 
 % interpretation, JIT, compilation, optimization
-
-\section{Modules: What Are They Good For?}
 
 \begin{acks}
 Research was partially funded by SLICE Lab industrial sponsors and affiliates Amazon, AMD, Apple, Google, Intel, and Qualcomm.
